--- a/src/qt/forms/aboutdialog.ui
+++ b/src/qt/forms/aboutdialog.ui
@@ -105,7 +105,7 @@
         <cursorShape>ArrowCursor</cursorShape>
        </property>
        <property name="text">
-        <string notr="true">&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Copyright &amp;copy; 2009-2013 The Bitcoin developers&lt;br/&gt;Copyright &amp;copy; 2011-2013 The Litecoin developers &lt;br/&gt;Copyright &amp;copy; 2013 The Infinitecoin developers&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string notr="true">&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Copyright &amp;copy; 2009-2013 The Bitcoin developers&lt;br/&gt;Copyright &amp;copy; 2011-2013 The Litecoin developers &lt;br/&gt;Copyright &amp;copy; 2013-2014 The Infinitecoin developers&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
        <property name="textFormat">
         <enum>Qt::AutoText</enum>
@@ -213,7 +213,7 @@
      <item>
       <widget class="QLabel" name="label_3">
        <property name="text">
-        <string>Offical Website: &lt;a href=&quot;http://www.infiniteco.in/&quot;&gt;www.infiniteco.in&lt;/a&gt;</string>
+        <string>Offical Website: &lt;a href=&quot;http://www.infinitecoin.com/&quot;&gt;www.infinitecoin.com&lt;/a&gt;</string>
        </property>
        <property name="openExternalLinks">
         <bool>true</bool>
