--- a/src/qt/forms/askpassphrasedialog.ui
+++ b/src/qt/forms/askpassphrasedialog.ui
@@ -51,7 +51,7 @@
      <item row="0" column="1">
       <widget class="QLineEdit" name="passEdit1">
        <property name="echoMode">
-        <enum>QLineEdit::Password</enum>
+        <enum>QLineEdit::PasswordEchoOnEdit</enum>
        </property>
       </widget>
      </item>
@@ -65,7 +65,7 @@
      <item row="1" column="1">
       <widget class="QLineEdit" name="passEdit2">
        <property name="echoMode">
-        <enum>QLineEdit::Password</enum>
+        <enum>QLineEdit::PasswordEchoOnEdit</enum>
        </property>
       </widget>
      </item>
@@ -79,7 +79,7 @@
      <item row="2" column="1">
       <widget class="QLineEdit" name="passEdit3">
        <property name="echoMode">
-        <enum>QLineEdit::Password</enum>
+        <enum>QLineEdit::PasswordEchoOnEdit</enum>
        </property>
       </widget>
      </item>
