--- a/src/qt/forms/askpassphrasedialog.ui
+++ b/src/qt/forms/askpassphrasedialog.ui
@@ -51,7 +51,7 @@
      <item row="0" column="1">
       <widget class="QLineEdit" name="passEdit1">
        <property name="echoMode">
-        <enum>QLineEdit::PasswordEchoOnEdit</enum>
+        <enum>QLineEdit::Password</enum>
        </property>
       </widget>
      </item>
