testnet & add checkbox about display community links

--- a/src/qt/forms/optionsdialog.ui
+++ b/src/qt/forms/optionsdialog.ui
@@ -87,6 +87,16 @@
         </widget>
        </item>
        <item>
+        <widget class="QCheckBox" name="showCommunityLinks">
+         <property name="toolTip">
+          <string>At the MainPage show community links</string>
+         </property>
+         <property name="text">
+          <string>&amp;At the MainPage show community links</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QCheckBox" name="detachDatabases">
          <property name="toolTip">
           <string>Detach block and address databases at shutdown. This means they can be moved to another data directory, but it slows down shutdown. The wallet is always detached.</string>
