--- a/src/qt/bitcoin.qrc
+++ b/src/qt/bitcoin.qrc
@@ -43,14 +43,14 @@
         <file alias="filesave">res/icons/filesave.png</file>
         <file alias="qrcode">res/icons/qrcode.png</file>
         <file alias="debugwindow">res/icons/debugwindow.png</file>
+        <file>res/icons/wait.png</file>
+        <file>res/movies/update_spinner.gif</file>
+        <file>res/movies/update_spinner2.gif</file>
     </qresource>
     <qresource prefix="/images">
         <file alias="about">res/images/about.png</file>
         <file alias="splash">res/images/splash2.png</file>
         <file>res/icons/bitcoin.png</file>
-    </qresource>
-    <qresource prefix="/movies">
-        <file alias="update_spinner">res/movies/update_spinner.mng</file>
     </qresource>
     <qresource prefix="/translations">
         <file alias="bg">locale/bitcoin_bg.qm</file>
@@ -89,4 +89,5 @@
         <file alias="zh_CN">locale/bitcoin_zh_CN.qm</file>
         <file alias="zh_TW">locale/bitcoin_zh_TW.qm</file>
     </qresource>
+    <qresource prefix="/movies"/>
 </RCC>
